Finishing Touches, made sidebar disappear at 1080px and fixed results center alignment

--- a/components/tests/results.module.css
+++ b/components/tests/results.module.css
@@ -9,27 +9,31 @@
     resize: vertical; */
     text-align: center;
     line-height: 0.9;
+    align-items: center;
+    justify-content: center;
 }
 
 .button {
     background-color: #333;
     color: #fff;
-    position: relative;
     padding: 12px 20px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    margin: 10px;
+    align-items: center;
+    justify-content: center;
 }
 
 .container {
     border-radius: 5px;
     background-color: #72747252;
     padding: 20px;
+    align-items: center;
+    justify-content: center;
 }
 
 .center {
-    position: relative;
-    top: 10px;
-    left: 170px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
